Initial work for adding new items

--- a/biome.jsonc
+++ b/biome.jsonc
@@ -8,6 +8,10 @@
     "rules": {
       "nursery": {
         "useSortedClasses": "warn"
+      },
+      "correctness": {
+        "noUnusedVariables": "warn",
+        "noUnusedImports": "warn"
       }
     }
   },
