--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@auth/core": "^0.37.0",
     "@convex-dev/auth": "^0.0.87",
     "@convex-dev/react-query": "^0.0.0-alpha.11",
+    "@langchain/core": "^0.3.68",
     "@tailwindcss/vite": "^4.1.11",
     "@tanstack/react-query": "^5.81.5",
     "@tanstack/react-router": "^1.123.0",
@@ -23,6 +24,7 @@
     "@tanstack/react-start": "^1.123.0",
     "clsx": "^2.1.1",
     "convex": "^1.25.0",
+    "langchain": "^0.3.30",
     "lucide-react": "^0.525.0",
     "path": "^0.12.7",
     "react": "^19.1.0",
