--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "langchain": "^0.3.30",
     "lucide-react": "^0.525.0",
     "path": "^0.12.7",
+    "pino": "^9.9.0",
+    "pino-pretty": "^13.1.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "tailwind-merge": "^3.3.1",
