--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.11"
+    "tailwindcss": "^4.1.11",
+    "zod": "3.25.67"
   },
   "devDependencies": {
     "@biomejs/biome": "2.0.5",
